--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1662,73 +1662,429 @@ h3 {
 }
 
 
-/* We Provide Card  */
+/*SOCIAL Media */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif
-}
-
-body {
-    min-width: 100vw;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #16384c;
-}
-
-.container .card {
-    max-width: 300px;
-    height: 215px;
-    margin: 30px 10px;
-    padding: 20px 15px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
-    transition: 0.3s ease-in-out;
-}
-
-.container .card:hover {
-    height: 450px;
-}
-
-.container .card .imgContainer {
-    position: relative;
-    width: 250px;
-    height: 250px;
-    top: -50px;
-    left: 10px;
-    z-index: 1;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-}
-
-.container .card .imgContainer img {
-    max-width: 100%;
-    border-radius: 4px;
-}
-
-.container .card .content {
-    position: relative;
-    margin-top: -140px;
-    padding: 10px 15px;
+.fa {
+    padding: 10px;
     text-align: center;
-    color: #111;
-    visibility: hidden;
+    margin: 5px 2px;
+    font-size: 30px;
+    width: 50px;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+}
+
+.fa:hover {
+    opacity: 0.9;
+}
+
+
+/*SOCIAL media END*/
+
+.our-services h2 em {
+    font-style: normal;
+    color: #03a4ed;
+}
+
+.our-services h2 span {
+    font-style: normal;
+    color: red;
+}
+
+
+/* CAREER CARD */
+
+.ag-format-container {
+    width: 1142px;
+    margin: 0 auto;
+}
+
+.ag-offer-block {
+    padding: 50px 0 90px
+}
+
+.ag-offer_list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -moz-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start
+}
+
+.ag-offer_item {
+    width: 33.33%;
+    overflow: hidden;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.ag-offer_item:not(:nth-child(1)):not(:nth-child(2)):not(:nth-child(3)) {
+    border-top: 1px solid #c1c1c1;
+}
+
+.ag-offer_item:not(:nth-child(3n)) {
+    border-right: 1px solid #c1c1c1;
+}
+
+.ag-offer_item:nth-child(1) .ag-offer_hidden-item {
+    background-color: #e45f0a;
+}
+
+.ag-offer_item:nth-child(2) .ag-offer_hidden-item {
+    background-color: #ffca00;
+}
+
+.ag-offer_item:nth-child(3) .ag-offer_hidden-item {
+    background-color: #15c1c1;
+}
+
+.ag-offer_item:nth-child(4) .ag-offer_hidden-item {
+    background-color: #008000;
+}
+
+.ag-offer_item:nth-child(5) .ag-offer_hidden-item {
+    background-color: #8c7b00;
+}
+
+.ag-offer_item:nth-child(6) .ag-offer_hidden-item {
+    background-color: #000080;
+}
+
+.ag-offer_item:hover .ag-offer_visible-item {
     opacity: 0;
-    pointer-events: none;
-    transition: 0.3s ease-in-out;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition-delay: 0s;
+    -moz-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    transition-delay: 0s;
 }
 
-.container .card:hover .content {
-    visibility: visible;
+.ag-offer_visible-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding: 35px 40px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: .4s .3s;
+    -moz-transition: .4s .3s;
+    -o-transition: .4s .3s;
+    transition: .4s .3s;
+}
+
+.ag-offer_img {
+    height: 64px;
+    width: 64px;
+    margin: 0 15px 0 0;
+}
+
+.ag-offer_title {
+    font-size: 22px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.ag-offer_hidden-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 30px;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-transform: rotate(180deg) scale(0);
+    -moz-transform: rotate(180deg) scale(0);
+    -ms-transform: rotate(180deg) scale(0);
+    -o-transform: rotate(180deg) scale(0);
+    transform: rotate(180deg) scale(0);
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+}
+
+.ag-offer_item:hover .ag-offer_hidden-item {
     opacity: 1;
-    margin-top: -40px;
-    transition-delay: 0.3s;
+    -webkit-transform: rotate(0deg) scale(1);
+    -moz-transform: rotate(0deg) scale(1);
+    -ms-transform: rotate(0deg) scale(1);
+    -o-transform: rotate(0deg) scale(1);
+    transform: rotate(0deg) scale(1);
+    -webkit-transition-delay: .3s;
+    -moz-transition-delay: .3s;
+    -o-transition-delay: .3s;
+    transition-delay: .3s;
 }
 
-@media (max-width: 330px) {
-    .container .card .imgContainer {
-        left: -2px;
+.ag-offer_text {
+    max-width: 100%;
+    opacity: 0;
+    font-size: 20px;
+    color: #FFF;
+    -webkit-transition: .3s .5s;
+    -moz-transition: .3s .5s;
+    -o-transition: .3s .5s;
+    transition: .3s .5s;
+}
+
+.ag-offer_item:hover .ag-offer_text {
+    opacity: 1;
+}
+
+.ag-offer_btn {
+    display: block;
+    padding: 10px 20px;
+    border: 2px solid #FFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    white-space: nowrap;
+    font-size: 25px;
+    color: #FFF;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.ag-offer_btn:hover {
+    border: 2px solid #0000d1;
+    background-color: #FFF;
+    text-decoration: none;
+    color: #0000d1;
+}
+
+@media only screen and (max-width: 767px) {
+    .ag-format-container {
+        width: 96%;
+    }
+    .ag-offer_item {
+        width: 100%;
+        margin: 0 0 30px;
+        border: 0 none !important;
+        border-bottom: 1px solid #c1c1c1 !important;
+    }
+    .ag-offer_visible-item {
+        padding: 0 20px 30px;
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+        -moz-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+    .ag-offer_item:hover .ag-offer_visible-item {
+        opacity: 1;
+        -webkit-transform: none;
+        -moz-transform: none;
+        -ms-transform: none;
+        -o-transform: none;
+        transform: none;
+    }
+    .ag-offer_hidden-item {
+        padding: 0 20px 20px;
+        opacity: 1;
+        position: static;
+        -webkit-transform: none;
+        -moz-transform: none;
+        -ms-transform: none;
+        -o-transform: none;
+        transform: none;
+    }
+    .ag-offer_item:nth-child(1) .ag-offer_hidden-item,
+    .ag-offer_item:nth-child(2) .ag-offer_hidden-item,
+    .ag-offer_item:nth-child(3) .ag-offer_hidden-item,
+    .ag-offer_item:nth-child(4) .ag-offer_hidden-item,
+    .ag-offer_item:nth-child(5) .ag-offer_hidden-item,
+    .ag-offer_item:nth-child(6) .ag-offer_hidden-item {
+        background-color: transparent;
+    }
+    .ag-offer_item:hover .ag-offer_text {
+        opacity: 1;
+    }
+    .ag-offer_title {
+        font-weight: bold;
+    }
+    .ag-offer_text {
+        opacity: 1;
+        font-size: 18px;
+        color: #000;
+    }
+    .ag-offer_btn {
+        border: 2px solid #0000d1;
+        background-color: #000080;
+        position: static;
+        -webkit-transform: none;
+        -moz-transform: none;
+        -ms-transform: none;
+        -o-transform: none;
+        transform: none;
     }
 }
+
+@media only screen and (max-width: 639px) {}
+
+@media only screen and (max-width: 479px) {}
+
+@media (min-width: 768px) and (max-width: 979px) {
+    .ag-format-container {
+        width: 750px;
+    }
+}
+
+@media (min-width: 980px) and (max-width: 1161px) {
+    .ag-format-container {
+        width: 960px;
+    }
+}
+
+
+/*CAREER CARD END*/
+
+
+/*US HEALTH CARE CARD2*/
+
+.card2 {
+    display: block;
+    top: 0px;
+    position: relative;
+    max-width: 350px;
+    background-color: #f2f8f9;
+    border-radius: 10px;
+    padding: 15px 15px;
+    margin: 20px;
+    text-decoration: none;
+    z-index: 0;
+    overflow: hidden;
+    border: 1px solid #f2f8f9;
+    &:hover {
+        transition: all 0.2s ease-out;
+        box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+        top: -4px;
+        border: 2px solid #cccccc;
+        background-color: white;
+    }
+    &:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: -16px;
+        right: -16px;
+        background: #fe3f40;
+        ;
+        height: 32px;
+        width: 32px;
+        border-radius: 32px;
+        transform: scale(2);
+        transform-origin: 50% 50%;
+        transition: transform 0.15s ease-out;
+    }
+    &:hover:before {
+        transform: scale(2.15);
+        -webkit-transform: ;
+        -moz-transform: ;
+        -ms-transform: ;
+        -o-transform: ;
+    }
+}
+
+
+/*CARD 2 END*/
+
+
+/*CARD 3*/
+
+.card3 {
+    display: block;
+    top: 0px;
+    position: relative;
+    max-width: 400px;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px 20px;
+    margin: 10px;
+    text-decoration: none;
+    overflow: hidden;
+    border: 1px solid #f2f8f9;
+    .go-corner {
+        opacity: 0.7;
+    }
+    &:hover {
+        border: 1px solid #00838d;
+        box-shadow: 0px 0px 999px 999px rgba(255, 255, 255, 0.5);
+        z-index: 500;
+    }
+}
+
+.card3:hover {
+    p,
+    h5 {
+        color: #d11616
+    }
+}
+
+
+/*END CARD 3*/
