--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1404,8 +1404,8 @@ contact
 }
 
 .phone-info h4 span i {
-    width: 46px;
-    height: 46px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
     text-align: center;
     line-height: 46px;
@@ -1413,14 +1413,15 @@ contact
     border-radius: 50%;
     color: #ff3b2c;
     font-size: 22px;
-    margin-left: 30px;
-    margin-right: 15px;
+    margin-left: 5px;
+    margin-right:5px;
+ 
 }
 
 .phone-info h4 span a {
     color: #fff;
-    font-size: 20px;
-    font-weight: 400;
+    font-size: 10px;
+    font-weight: 400px;
 }
 
 form#contact .contact-dec {
