--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1404,8 +1404,8 @@ contact
 }
 
 .phone-info h4 span i {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: inline-block;
     text-align: center;
     line-height: 46px;
@@ -1420,8 +1420,8 @@ contact
 
 .phone-info h4 span a {
     color: #fff;
-    font-size: 10px;
-    font-weight: 400px;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 form#contact .contact-dec {
