--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1404,8 +1404,8 @@ contact
 }
 
 .phone-info h4 span i {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
     text-align: center;
     line-height: 46px;
@@ -1670,8 +1670,12 @@ h3 {
     color: white;
 }
 
+/* 
+---------------------------------------------
+Social Media
+--------------------------------------------- 
+*/
 
-/*SOCIAL Media */
 
 .fa {
     padding: 5px;
@@ -1708,7 +1712,20 @@ h3 {
 }
 
 
-/*SOCIAL media END*/
+/* 
+---------------------------------------------
+Social Media End
+--------------------------------------------- 
+*/
+
+
+/* 
+---------------------------------------------
+Career Card
+--------------------------------------------- 
+*/
+
+
 
 .our-services h2 em {
     font-style: normal;
@@ -2010,11 +2027,18 @@ h3 {
     }
 }
 
+/* 
+---------------------------------------------
+Career Card End
+--------------------------------------------- 
+*/
 
-/*CAREER CARD END*/
 
-
-/*US HEALTH CARE CARD2*/
+/* 
+---------------------------------------------
+*US HEALTH CARE CARD2
+--------------------------------------------- 
+*/
 
 .card2 {
     display: block;
@@ -2058,9 +2082,11 @@ h3 {
 
 /*CARD 2 END*/
 
-
-/*CARD 3*/
-
+/* 
+---------------------------------------------
+ CARD3
+--------------------------------------------- 
+*/
 .card3 {
     display: block;
     font-family: "Poppins", "sans-serif";
@@ -2092,6 +2118,8 @@ h3 {
 }
 
 
-/*END CARD 3*/
-
-
+/* 
+---------------------------------------------
+ CARD3 END
+--------------------------------------------- 
+*/
