--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -1680,10 +1680,10 @@ Social Media
 
 
 .fa {
-    padding: 5px;
+    padding: 6px;
     text-align: center;
-    margin: 5px 2px;
-    font-size: 30px;
+    margin: 7px 5px;
+    font-size: 25px;
     width: 50px;
     text-decoration: none;
     border-radius: 50%;
@@ -1694,18 +1694,14 @@ Social Media
     color: white;
 }
 
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
-}
-
 .fa-instagram {
     background: #125688;
     color: white;
 }
 
-.fa-google {
-    background: #dd4b39;
+
+.fa-linkedin {
+    background: #125688;
     color: white;
 }
 
